# teloxide-mx

./: CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  DPTREE_GUIDE.md  GAP_ANALYSIS.md  LICENSE  MASTER_REPORT.md  MIGRATION_GUIDE.md  README.md  RELEASE_PROCEDURE.md  ROADMAP.md  triagebot.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  parse-error.md  unknown-telegram-error.md
.github/workflows/: ci.yml
crates/teloxide/: Cargo.toml
crates/teloxide-core/: CHANGELOG.md  Cargo.toml  README.md  schema.ron
crates/teloxide-core/src/: errors.rs  lib.rs  local_macros.rs  payloads.rs  types.rs  util.rs
crates/teloxide-macros/src/: callback_data.rs  lib.rs
crates/teloxide/src/: dispatching.rs  error_handlers.rs  error_types.rs  lib.rs  prelude.rs  sugar.rs  utils.rs
crates/teloxide_max/: Cargo.toml
crates/teloxide_max/examples/: admin.rs  buttons.rs  chat_member_updates.rs  command.rs  db_remember.rs  deep_linking.rs  dialogue.rs  dispatching_features.rs  heroku_ping_pong.rs  inline.rs  middlewares.rs  middlewares_fallible.rs  ngrok_ping_pong.rs  purchase.rs  shared_state.rs  throw_dice.rs
crates/teloxide_max/src/: dispatching.rs  error_handlers.rs  error_types.rs  features.md  lib.rs  prelude.rs  utils.rs
crates/teloxide_max/tests/: command.rs  e2e_all.rs  mongodb.rs  postgres.rs  redis.rs  (+1 more)
crates/teloxide_max_core/: CHANGELOG.md  Cargo.toml  README.md  schema.ron
crates/teloxide_max_macros/: CHANGELOG.md  Cargo.toml
crates/teloxide_max_macros/src/: bot_commands.rs  callback_data.rs  fields_parse.rs  lib.rs
(+286 files in other folders)
