[workspace]
members = ["crates/*"]
resolver = "2"

# The settings below will be applied to all crates in the workspace
[workspace.package]
# MSRV (minimal supported Rust version).
rust-version = "1.85"
edition = "2021"

license = "MIT"
homepage = "https://github.com/sinescode/teloxide_max"
repository = "https://github.com/sinescode/teloxide_max"

[workspace.metadata.release]
tag-message = "Release {{crate_name}} version {{version}}"
tag-name = "{{prefix}}v{{version}}"
